--- a/car/templates/car/car_list.html
+++ b/car/templates/car/car_list.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Car List</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </head>
 <body>
-<p>this page will show the list of cars</p>
-<p>our car list: {{ cars }}</p>
+<h1>this page will show the list of cars</h1>
+<br>
+{% for car in cars %}
+    <p>Model: {{ car.model }}</p>
+    <p>Brand: {{ car.brand }}</p>
+    <p>Year: {{ car.year }}</p>
+    <p>Registered by: {{ car.registered_by }}</p>
+    <p>----------------</p>
+{% empty %}
+    <p class="text-danger">There is not any car to show</p>
+{% endfor %}
+
 </body>
 </html>
