add teamplate tag url and name property to the project

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,8 @@
 <p>
     this is a test with render and template - Home page
 </p>
+<a href="{% url 'car' %}">
+    Cars Page
+</a>
 </body>
 </html>
