--- a/car/templates/car/car_list.html
+++ b/car/templates/car/car_list.html
@@ -1,19 +1,22 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Car List</title>
+    <link rel="stylesheet" href="{% static "main.css" %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
 </head>
-<body>
+<body style="margin-left: 20px ">
 <h1>this page will show the list of cars</h1>
 <br>
 {% for car in cars %}
     <p>Model: {{ car.model }}</p>
+    <img src="{{ car.image.url }}" alt="{{ car.image }}" width="250" height="150">
     <p>Brand: {{ car.brand }}</p>
     <p>Year: {{ car.year }}</p>
     <p>Registered by: {{ car.registered_by }}</p>
