--- a/car/templates/car/car_list.html
+++ b/car/templates/car/car_list.html
@@ -1,35 +1,4 @@
 {% load static %}
-{% comment %}
-	<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Car List</title>
-    <link rel="stylesheet" href="{% static "main.css" %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-</head>
-<body style="margin-left: 20px ">
-<h1>this page will show the list of cars</h1>
-<br>
-{% for car in cars %}
-    <p>Model: {{ car.model }}</p>
-    <img src="{{ car.image.url }}" alt="{{ car.image }}" width="250" height="150">
-    <p>Brand: {{ car.brand }}</p>
-    <p>Year: {{ car.year }}</p>
-    <p>Registered by: {{ car.registered_by }}</p>
-    <p>----------------</p>
-{% empty %}
-    <p class="text-danger">There is not any car to show</p>
-{% endfor %}
-
-</body>
-</html>
-{% endcomment %}
-
 
 <!DOCTYPE html>
 
@@ -83,24 +52,11 @@
                     <ul class="search-list collection display-none"></ul>
                 </div>
                 <ul class="navbar-list right">
-                    <li class="dropdown-language"><a class="waves-effect waves-block waves-light translation-button"
-                                                     href="#" data-target="translation-dropdown"><span
-                            class="flag-icon flag-icon-ir"></span></a></li>
-                    <li class="hide-on-med-and-down"><a class="waves-effect waves-block waves-light toggle-fullscreen"
-                                                        href="javascript:void(0);"><i class="material-icons">settings_overscan</i></a>
-                    </li>
-                    <li class="hide-on-large-only search-input-wrapper"><a
-                            class="waves-effect waves-block waves-light search-button" href="javascript:void(0);"><i
-                            class="material-icons">search</i></a></li>
-                    <li><a class="waves-effect waves-block waves-light notification-button" href="javascript:void(0);"
-                           data-target="notifications-dropdown"><i class="material-icons">notifications_none<small
-                            class="notification-badge">5</small></i></a></li>
+                    <li style="color: #0b0b0b"><strong>{% now 'H:i - Y/d/m' %}</strong></li>
                     <li><a class="waves-effect waves-block waves-light profile-button" href="javascript:void(0);"
                            data-target="profile-dropdown"><span class="avatar-status avatar-online"><img
                             src="{% static 'app-assets/images/avatar/avatar-7.png' %}" alt="avatar"><i></i></span></a>
                     </li>
-                    <li><a class="waves-effect waves-block waves-light sidenav-trigger" href="#"
-                           data-target="slide-out-right"><i class="material-icons">format_indent_increase</i></a></li>
                 </ul>
 
                 <!-- profile-dropdown-->
@@ -268,7 +224,6 @@
             class="material-icons">error_outline</span><span class="member-info">No results found.</span></a></li>
 </ul>
 
-
 <!-- BEGIN: SideNav-->
 <aside class="sidenav-main nav-expanded nav-lock nav-collapsible sidenav-dark sidenav-active-rounded">
     <div class="brand-sidebar">
@@ -320,7 +275,8 @@
         </div>
         <div class="col s12">
             <div class="container">
-                <div class="section">
+                {% if cars %}
+                	<div class="section">
                     <div class="card">
                         <div class="card-content">
                             <p class="caption mb-0">تست شهرک نمایشگاهی خودرو MOHI</p>
@@ -328,7 +284,7 @@
                     </div>
                     <div class="row">
                         <h4 class="col s12">خودروها</h4>
-                        {#this are the divs that shows the cars#}
+                        {#this div's show the cars#}
                         <div class="col s12 m12 grid">
                             {% for car in cars %}
                                 <figure class="effect-ruby">
@@ -338,10 +294,13 @@
                                         <h2>
                                             <span>{{ car.year }}-{{ car.model }}</span>
                                         </h2>
+                                        {#information that shown in hover#}
                                         <p>
                                             کارکرد:{{ car.kilometers }}
                                             <br>
                                             قیمت: {{ car.price }}
+                                            <br>
+                                            تاریخ ثبت: {{ car.created_date|date:"o/m/d" }}
                                         </p>
                                         <a href="">View more</a>
                                     </figcaption>
@@ -350,6 +309,7 @@
                         </div>
                     </div>
                 </div>
+                {% endif %}
             </div>
             <div class="content-overlay"></div>
         </div>
