change card type for car detail page - add try except to the car_detail function in views.py

--- a/car/templates/car/car_detail.html
+++ b/car/templates/car/car_detail.html
@@ -243,13 +243,11 @@
                 class="material-icons">receipt</i><span class="menu-title" data-i18n="Invoice">نمونه</span></a>
             <div class="collapsible-body">
                 <ul class="collapsible collapsible-sub" data-collapsible="accordion">
-                    <li><a href=""><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice List">لیست فاکتور</span></a>
+                    <li><a href=""><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice List">ثبت خودرو جدید</span></a>
                     </li>
-                    <li><a href=""><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice View">نمای فاکتور</span></a>
+                    <li><a href="{% url 'car:car_page' %}"><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice View">لیست خودروها</span></a>
                     </li>
-                    <li><a href=""><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice Edit">ویرایش فاکتور</span></a>
-                    </li>
-                    <li><a href=""><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice Add">اضافه کردن فاکتور</span></a>
+                    <li><a href=""><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice Edit">صفحه جستجو</span></a>
                     </li>
                 </ul>
             </div>
