--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <p>
     this is a test with render and template - Home page
 </p>
-<a href="{% url 'car:car' %}">
+<a href="{% url 'car:car_page' %}">
     Cars Page
 </a>
 </body>
