create base.html file for inheritance in html files. use extends and block template tag in other html files.

--- a/car/templates/car/car_list.html
+++ b/car/templates/car/car_list.html
@@ -1,272 +1,8 @@
-{% load static %}
+{% extends 'base/base.html' %}
 {% load humanize %}
-<!DOCTYPE html>
 
-<html class="loading" lang="en" data-textdirection="rtl">
-<!-- BEGIN: Head-->
-
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <meta name="description"
-          content="Materialize is a Material Design Admin Template,It's modern, responsive and based on Material Design by Google.">
-    <meta name="keywords"
-          content="materialize, admin template, dashboard template, flat admin template, responsive admin template, eCommerce dashboard, analytic dashboard">
-    <meta name="author" content="ThemeSelect">
-    <title>Car list</title>
-    <link rel="apple-touch-icon" href="{% static 'app-assets/images/favicon/apple-touch-icon-152x152.png' %}">
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'app-assets/images/favicon/favicon-32x32.png' %}">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- BEGIN: VENDOR CSS-->
-    <link rel="stylesheet" type="text/css" href="{% static 'app-assets/vendors/vendors.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'app-assets/vendors/flag-icon/css/flag-icon.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'app-assets/vendors/magnific-popup/magnific-popup.css' %}">
-    <!-- END: VENDOR CSS-->
-    <link rel="stylesheet" type="text/css" href="{% static 'app-assets/css-rtl/style-rtl.min.css' %}">
-    <!-- BEGIN: Page Level CSS-->
-    <link rel="stylesheet" type="text/css"
-          href="{% static 'app-assets/css-rtl/themes/vertical-dark-menu-template/materialize.min.css' %}">
-    <link rel="stylesheet" type="text/css"
-          href="{% static 'app-assets/css-rtl/themes/vertical-dark-menu-template/style.min.css' %}">
-    <link rel="stylesheet" type="text/css"
-          href="{% static 'app-assets/vendors/hover-effects/media-hover-effects.css' %}">
-    <!-- END: Page Level CSS-->
-    <!-- BEGIN: Custom CSS-->
-    <link rel="stylesheet" type="text/css" href="{% static 'app-assets/css-rtl/custom/custom.css' %}">
-    <!-- END: Custom CSS-->
-</head>
-<!-- END: Head-->
-
-<body class="vertical-layout page-header-light vertical-menu-collapsible vertical-dark-menu preload-transitions 2-columns   "
-      data-open="click" data-menu="vertical-dark-menu" data-col="2-columns">
-
-<!-- BEGIN: Header-->
-<header class="page-topbar" id="header">
-    <div class="navbar navbar-fixed">
-        <nav class="navbar-main navbar-color nav-collapsible sideNav-lock navbar-light">
-            <div class="nav-wrapper">
-                <div class="header-search-wrapper hide-on-med-and-down"><i class="material-icons">search</i>
-                    <input class="header-search-input z-depth-2 iransans" type="text" name="Search"
-                           placeholder="جست و جو..." data-search="template-list">
-                    <ul class="search-list collection display-none"></ul>
-                </div>
-                <ul class="navbar-list right">
-                    <li style="color: #0b0b0b"><strong>{% now 'H:i - Y/d/m' %}</strong></li>
-                    <li><a class="waves-effect waves-block waves-light profile-button" href="javascript:void(0);"
-                           data-target="profile-dropdown"><span class="avatar-status avatar-online"><img
-                            src="{% static 'app-assets/images/avatar/avatar-7.png' %}" alt="avatar"><i></i></span></a>
-                    </li>
-                </ul>
-
-                <!-- profile-dropdown-->
-                <ul class="dropdown-content" id="profile-dropdown">
-                    <li><a class="grey-text text-darken-1" href=""><i class="material-icons">person_outline</i>
-                        مشخصات</a></li>
-                    <li><a class="grey-text text-darken-1" href=""><i class="material-icons">chat_bubble_outline</i>
-                        چت</a></li>
-                    <li><a class="grey-text text-darken-1" href=""><i
-                            class="material-icons">help_outline</i> راهنمایی</a></li>
-                    <li class="divider"></li>
-                    <li><a class="grey-text text-darken-1" href=""><i class="material-icons">lock_outline</i>
-                        قفل کردن</a></li>
-                    <li><a class="grey-text text-darken-1" href=""><i
-                            class="material-icons">keyboard_tab</i> خروج</a></li>
-                </ul>
-            </div>
-            <nav class="display-none search-sm">
-                <div class="nav-wrapper">
-                    <form id="navbarForm">
-                        <div class="input-field search-input-sm">
-                            <input class="search-box-sm" type="search" required="" id="search"
-                                   placeholder="Explore Materialize" data-search="template-list">
-                            <label class="label-icon" for="search"><i
-                                    class="material-icons search-sm-icon">search</i></label><i
-                                class="material-icons search-sm-close">close</i>
-                            <ul class="search-list collection search-list-sm display-none"></ul>
-                        </div>
-                    </form>
-                </div>
-            </nav>
-        </nav>
-    </div>
-</header>
-<!-- END: Header-->
-<ul class="display-none" id="default-search-main">
-    <li class="auto-suggestion-title">
-        <a class="collection-item" href="#">
-            <h6 class="search-title">FILES</h6>
-        </a>
-    </li>
-    <li class="auto-suggestion">
-        <a class="collection-item" href="#">
-            <div class="display-flex">
-                <div class="display-flex align-item-center flex-grow-1">
-                    <div class="avatar"><img src="{% static 'app-assets/images/icon/pdf-image.png' %}" width="24"
-                                             height="30"
-                                             alt="sample image"></div>
-                    <div class="member-info display-flex flex-column"><span
-                            class="black-text">Two new item submitted</span><small class="grey-text">Marketing
-                        Manager</small></div>
-                </div>
-                <div class="status"><small class="grey-text">17kb</small></div>
-            </div>
-        </a>
-    </li>
-    <li class="auto-suggestion">
-        <a class="collection-item" href="#">
-            <div class="display-flex">
-                <div class="display-flex align-item-center flex-grow-1">
-                    <div class="avatar"><img src="{% static 'app-assets/images/icon/doc-image.png' %}" width="24"
-                                             height="30"
-                                             alt="sample image"></div>
-                    <div class="member-info display-flex flex-column"><span
-                            class="black-text">52 Doc file Generator</span><small class="grey-text">FontEnd
-                        Developer</small></div>
-                </div>
-                <div class="status"><small class="grey-text">550kb</small></div>
-            </div>
-        </a>
-    </li>
-    <li class="auto-suggestion">
-        <a class="collection-item" href="#">
-            <div class="display-flex">
-                <div class="display-flex align-item-center flex-grow-1">
-                    <div class="avatar"><img src="{% static 'app-assets/images/icon/xls-image.png' %}" width="24"
-                                             height="30"
-                                             alt="sample image"></div>
-                    <div class="member-info display-flex flex-column"><span
-                            class="black-text">25 Xls File Uploaded</span><small class="grey-text">Digital Marketing
-                        Manager</small></div>
-                </div>
-                <div class="status"><small class="grey-text">20kb</small></div>
-            </div>
-        </a>
-    </li>
-    <li class="auto-suggestion">
-        <a class="collection-item" href="#">
-            <div class="display-flex">
-                <div class="display-flex align-item-center flex-grow-1">
-                    <div class="avatar"><img src="{% static 'app-assets/images/icon/jpg-image.png' %}" width="24"
-                                             height="30"
-                                             alt="sample image"></div>
-                    <div class="member-info display-flex flex-column"><span class="black-text">Anna Strong</span><small
-                            class="grey-text">Web Designer</small></div>
-                </div>
-                <div class="status"><small class="grey-text">37kb</small></div>
-            </div>
-        </a>
-    </li>
-    <li class="auto-suggestion-title">
-        <a class="collection-item" href="#">
-            <h6 class="search-title">MEMBERS</h6>
-        </a>
-    </li>
-    <li class="auto-suggestion">
-        <a class="collection-item" href="#">
-            <div class="display-flex">
-                <div class="display-flex align-item-center flex-grow-1">
-                    <div class="avatar"><img class="circle" src="{% static 'app-assets/images/avatar/avatar-7.png' %}"
-                                             width="30" alt="sample image"></div>
-                    <div class="member-info display-flex flex-column"><span class="black-text">John Doe</span><small
-                            class="grey-text">UI designer</small></div>
-                </div>
-            </div>
-        </a>
-    </li>
-    <li class="auto-suggestion">
-        <a class="collection-item" href="#">
-            <div class="display-flex">
-                <div class="display-flex align-item-center flex-grow-1">
-                    <div class="avatar"><img class="circle" src="{% static 'app-assets/images/avatar/avatar-8.png' %}"
-                                             width="30" alt="sample image"></div>
-                    <div class="member-info display-flex flex-column"><span class="black-text">Michal Clark</span><small
-                            class="grey-text">FontEnd Developer</small></div>
-                </div>
-            </div>
-        </a>
-    </li>
-    <li class="auto-suggestion">
-        <a class="collection-item" href="#">
-            <div class="display-flex">
-                <div class="display-flex align-item-center flex-grow-1">
-                    <div class="avatar"><img class="circle" src="{% static 'app-assets/images/avatar/avatar-10.png' %}"
-                                             width="30" alt="sample image"></div>
-                    <div class="member-info display-flex flex-column"><span
-                            class="black-text">Milena Gibson</span><small class="grey-text">Digital Marketing</small>
-                    </div>
-                </div>
-            </div>
-        </a>
-    </li>
-    <li class="auto-suggestion">
-        <a class="collection-item" href="#">
-            <div class="display-flex">
-                <div class="display-flex align-item-center flex-grow-1">
-                    <div class="avatar"><img class="circle" src="{% static 'app-assets/images/avatar/avatar-12.png' %}"
-                                             width="30" alt="sample image"></div>
-                    <div class="member-info display-flex flex-column"><span class="black-text">Anna Strong</span><small
-                            class="grey-text">Web Designer</small></div>
-                </div>
-            </div>
-        </a>
-    </li>
-</ul>
-<ul class="display-none" id="page-search-title">
-    <li class="auto-suggestion-title">
-        <a class="collection-item" href="#">
-            <h6 class="search-title">PAGES</h6>
-        </a>
-    </li>
-</ul>
-<ul class="display-none" id="search-not-found">
-    <li class="auto-suggestion"><a class="collection-item display-flex align-items-center" href="#"><span
-            class="material-icons">error_outline</span><span class="member-info">No results found.</span></a></li>
-</ul>
-
-<!-- BEGIN: SideNav-->
-<aside class="sidenav-main nav-expanded nav-lock nav-collapsible sidenav-dark sidenav-active-rounded">
-    <div class="brand-sidebar">
-        <h1 class="logo-wrapper">
-            <a class="brand-logo darken-1" href="http://localhost:8000/">
-                <img class="hide-on-med-and-down "
-                     src="{% static 'app-assets/images/logo/Logo.png' %}"
-                     alt="carcity logo"/>
-                <img class="show-on-medium-and-down hide-on-med-and-up"
-                     src="{% static 'app-assets/images/logo/Logo.png' %}"
-                     alt="carcity logo"/>
-                <span class="logo-text hide-on-med-and-down">شهرک خودرویی</span>
-            </a>
-            <a class="navbar-toggler" href="#">
-                <i class="material-icons">radio_button_checked</i>
-            </a>
-        </h1>
-    </div>
-    <ul class="sidenav sidenav-collapsible leftside-navigation collapsible sidenav-fixed menu-shadow" id="slide-out"
-        data-menu="menu-navigation" data-collapsible="accordion">
-        <li class="bold"><a class="collapsible-header waves-effect waves-cyan " href="Javascript:void(0)"><i
-                class="material-icons">receipt</i><span class="menu-title" data-i18n="Invoice">خودروها</span></a>
-            <div class="collapsible-body">
-                <ul class="collapsible collapsible-sub" data-collapsible="accordion">
-                    <li><a href=""><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice List">ثبت خودرو جدید</span></a>
-                    </li>
-                    <li><a href="{% url 'car:car_page' %}"><i class="material-icons">radio_button_unchecked</i><span
-                            data-i18n="Invoice View">لیست خودروها</span></a>
-                    </li>
-                    <li><a href=""><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice Edit">صفحه جستجو</span></a>
-                    </li>
-                </ul>
-            </div>
-        </li>
-    </ul>
-    <div class="navigation-background"></div>
-    <a class="sidenav-trigger btn-sidenav-toggle btn-floating btn-medium waves-effect waves-light hide-on-large-only"
-       href="#" data-target="slide-out"><i class="material-icons">menu</i></a>
-</aside>
-<!-- END: SideNav-->
-
-<!-- BEGIN: Page Main-->
-<div id="main">
+{% block content %}
+	<div id="main">
     <div class="row">
         <div class="pt-1 pb-0" id="breadcrumbs-wrapper">
             <!-- Search for small screen-->
@@ -322,41 +58,4 @@
         </div>
     </div>
 </div>
-<!-- END: Page Main-->
-
-<!-- BEGIN: Footer-->
-
-<footer class="page-footer footer footer-static footer-light navbar-border navbar-shadow">
-    <div class="footer-copyright">
-        <div class="container">
-            <span>&copy;
-                <a href="https://mohsenhafezi.com/" target="_blank">
-                    Mohi.Developer
-                </a>
-                    تمامی حقوق محفوظ است.
-            </span>
-        </div>
-    </div>
-</footer>
-
-<!-- END: Footer-->
-<!-- BEGIN VENDOR JS-->
-<script src="{% static 'app-assets/js/vendors.min.js' %}"></script>
-<!-- BEGIN VENDOR JS-->
-<!-- BEGIN PAGE VENDOR JS-->
-<script src="{% static 'app-assets/vendors/magnific-popup/jquery.magnific-popup.min.js' %}"></script>
-<script src="{% static 'app-assets/vendors/imagesloaded.pkgd.min.js' %}"></script>
-<script src="{% static 'app-assets/vendors/masonry.pkgd.min.js' %}"></script>
-<!-- END PAGE VENDOR JS-->
-<!-- BEGIN THEME  JS-->
-<script src="{% static 'app-assets/js/plugins.min.js' %}"></script>
-<script src="{% static 'app-assets/js/search.min.js' %}"></script>
-<script src="{% static 'app-assets/js-rtl/custom/custom-script-rtl.min.js' %}"></script>
-<script src="{% static 'app-assets/js/scripts/customizer.min.js' %}"></script>
-<!-- END THEME  JS-->
-<!-- BEGIN PAGE LEVEL JS-->
-<script src="{% static 'app-assets/js/scripts/media-hover-effects.min.js' %}"></script>
-<!-- END PAGE LEVEL JS-->
-</body>
-
-</html>
+{% endblock %}
