create base.html file for inheritance in html files. use extends and block template tag in other html files.

--- a/car/templates/car/car_detail.html
+++ b/car/templates/car/car_detail.html
@@ -1,6 +1,9 @@
 {% extends 'base/base.html' %}
 {% load humanize %}
 
+{% block title %}
+	Car Information
+{% endblock %}
 {% block content %}
 	<div id="main">
     <div class="row">
