--- a/car/templates/car/car_list.html
+++ b/car/templates/car/car_list.html
@@ -1,6 +1,9 @@
 {% extends 'base/base.html' %}
 {% load humanize %}
 
+{% block title %}
+    Car lists
+{% endblock %}
 {% block content %}
 	<div id="main">
     <div class="row">
