--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -15,7 +15,7 @@
     <meta name="keywords"
           content="materialize, admin template, dashboard template, flat admin template, responsive admin template, eCommerce dashboard, analytic dashboard">
     <meta name="author" content="ThemeSelect">
-    <title>Car list</title>
+    <title>{% block title %}{% endblock title %}</title>
     <link rel="apple-touch-icon" href="{% static 'app-assets/images/favicon/apple-touch-icon-152x152.png' %}">
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'app-assets/images/favicon/favicon-32x32.png' %}">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -229,9 +229,9 @@
 <aside class="sidenav-main nav-expanded nav-lock nav-collapsible sidenav-dark sidenav-active-rounded">
     <div class="brand-sidebar">
         <h1 class="logo-wrapper">
-            <a class="brand-logo darken-1" href=""><img class="hide-on-med-and-down "
-                                                        src="{% static 'app-assets/images/logo/Logo.png' %}"
-                                                        alt="carcity logo"/><img
+            <a class="brand-logo darken-1" href="http://localhost:8000/"><img class="hide-on-med-and-down "
+                                                                              src="{% static 'app-assets/images/logo/Logo.png' %}"
+                                                                              alt="carcity logo"/><img
                     class="show-on-medium-and-down hide-on-med-and-up"
                     src="{% static 'app-assets/images/logo/Logo.png' %}"
                     alt="carcity logo"/><span class="logo-text hide-on-med-and-down">شهرک خودرویی</span></a><a
@@ -239,15 +239,66 @@
     </div>
     <ul class="sidenav sidenav-collapsible leftside-navigation collapsible sidenav-fixed menu-shadow" id="slide-out"
         data-menu="menu-navigation" data-collapsible="accordion">
-        <li class="bold"><a class="collapsible-header waves-effect waves-cyan " href="Javascript:void(0)"><i
-                class="material-icons">receipt</i><span class="menu-title" data-i18n="Invoice">نمونه</span></a>
+{#        cars menu #}
+        <li class="bold">
+            <a class="collapsible-header waves-effect waves-cyan " href="Javascript:void(0)">
+                <i class="material-icons">
+                    receipt
+                </i>
+                <span class="menu-title" data-i18n="Invoice">
+                    خودرو ها
+                </span>
+            </a>
             <div class="collapsible-body">
                 <ul class="collapsible collapsible-sub" data-collapsible="accordion">
-                    <li><a href=""><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice List">ثبت خودرو جدید</span></a>
+                    <li>
+                        <a href="{% url 'car:car_page' %}">
+                            <i class="material-icons">radio_button_unchecked</i>
+                            <span data-i18n="Invoice View">
+                                لیست خودروها
+                            </span>
+                        </a>
                     </li>
-                    <li><a href="{% url 'car:car_page' %}"><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice View">لیست خودروها</span></a>
+                    <li>
+                        <a href="">
+                            <i class="material-icons">
+                                radio_button_unchecked
+                            </i>
+                            <span data-i18n="Invoice Edit">
+                                صفحه جستجو
+                            </span>
+                        </a>
                     </li>
-                    <li><a href=""><i class="material-icons">radio_button_unchecked</i><span data-i18n="Invoice Edit">صفحه جستجو</span></a>
+                </ul>
+            </div>
+        </li>
+{#        cars dealer menu #}
+        <li class="bold">
+            <a class="collapsible-header waves-effect waves-cyan " href="Javascript:void(0)">
+                <i class="material-icons">receipt</i>
+                <span class="menu-title" data-i18n="Invoice">
+                    نمایشگاه ها
+                </span>
+            </a>
+            <div class="collapsible-body">
+                <ul class="collapsible collapsible-sub" data-collapsible="accordion">
+                    <li>
+                        <a href="">
+                            <i class="material-icons">radio_button_unchecked</i>
+                            <span data-i18n="Invoice List">ثبت خودرو جدید</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'car:car_page' %}">
+                            <i class="material-icons">radio_button_unchecked</i>
+                            <span data-i18n="Invoice View">لیست خودروها</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="material-icons">radio_button_unchecked</i>
+                            <span data-i18n="Invoice Edit">صفحه جستجو</span>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -296,6 +347,7 @@
 <!-- END THEME  JS-->
 <!-- BEGIN PAGE LEVEL JS-->
 <script src="{% static 'app-assets/js/scripts/media-hover-effects.min.js' %}"></script>
+<script src="{% static 'app-assets/js/scripts/advance-ui-carousel.min.js' %}"></script>
 <!-- END PAGE LEVEL JS-->
 </body>
 
